# pybob

./: .gitignore  LICENCE.md  README.md  __init__.py  bob.py  bob_client.py  client.py  driver.py  exceptions.py  pyproject.toml
endpoints/: BaseEndpoint.py  Documents.py  Employment.py  Equities.py  Metadata.py  Onboarding.py  Payroll.py  People.py  Reports.py  Salaries.py  Tasks.py  TimeOff.py  Training.py  VariablePayments.py  Work.py  __init__.py
models/: Bob.py  Metadata.py  Payroll.py  People.py  Reports.py  Tasks.py
pybob_sdk/v1/: documents.py
v1/: attendance.py  base.py  documents.py  hiring.py  metadata.py  objects.py  onboarding.py  payroll.py  people.py  reports.py  tables.py  tasks.py  timeoff.py
